metadata/root/main/default/objects/TestMetaObj__c/TestMetaObj__c.object-meta.xml
<CustomObject>
    <description>any1</description>
    <label>TestMetaObj</label>
    <nameField>
        <label>TestMetaObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestMetaObjs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>