metadata/root/main/default/objects/TestMetaObj__c/fields/AutoNumber1__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber1__c</fullName>
    <description>any1</description>
    <displayFormat>A-{0000}</displayFormat>
    <label>AutoNumber1</label>
    <type>AutoNumber</type>
</CustomField>