metadata/root/main/default/objects/TestMetaObj__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>CaseLookup</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TestMetaObjs</relationshipLabel>
    <relationshipName>TestMetaObjs</relationshipName>
    <type>Lookup</type>
</CustomField>