metadata/root/main/default/objects/TestMetaObj__c/fields/CaseMasterDetailsRel__c.field-meta.xml
<CustomField>
    <fullName>CaseMasterDetailsRel__c</fullName>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>CaseMasterDetailsRel</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TestMetaObjs (CaseMasterDetailsRel)</relationshipLabel>
    <relationshipName>TestMetaObjs1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>