metadata/root/main/default/objects/TestMetaObj__c/fields/CheckBox1__c.field-meta.xml
<CustomField>
    <fullName>CheckBox1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>CheckBox1</label>
    <type>Checkbox</type>
</CustomField>