metadata/root/main/default/objects/TestMetaObj__c/fields/Currency1__c.field-meta.xml
<CustomField>
    <fullName>Currency1__c</fullName>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>Currency1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>