metadata/root/main/default/objects/TestMetaObj__c/fields/Date1__c.field-meta.xml
<CustomField>
    <fullName>Date1__c</fullName>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>Date1</label>
    <type>Date</type>
</CustomField>