metadata/root/main/default/objects/TestMetaObj__c/fields/email1__c.field-meta.xml
<CustomField>
    <fullName>email1__c</fullName>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>email1</label>
    <type>Email</type>
</CustomField>