metadata/root/main/default/objects/TestMetaObj__c/fields/Geolocation1__c.field-meta.xml
<CustomField>
    <fullName>Geolocation1__c</fullName>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>Geolocation1</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>