metadata/root/main/default/objects/TestMetaObj__c/fields/number1__c.field-meta.xml
<CustomField>
    <fullName>number1__c</fullName>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>number1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>