metadata/root/main/default/objects/TestMetaObj__c/fields/Picklist1__c.field-meta.xml
<CustomField>
    <fullName>Picklist1__c</fullName>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>Picklist1Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Globaltestset</valueSetName>
    </valueSet>
</CustomField>