metadata/root/main/default/objects/TestMetaObj__c/fields/PicklistGlob__c.field-meta.xml
<CustomField>
    <fullName>PicklistGlob__c</fullName>
    <label>PicklistGlob</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Globaltestset</valueSetName>
    </valueSet>
</CustomField>