metadata/root/main/default/objects/TestMetaObj__c/fields/PickMulti1__c.field-meta.xml
<CustomField>
    <fullName>PickMulti1__c</fullName>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>PickMulti1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Val3</fullName>
            </value>
            <value>
                <fullName>Val1</fullName>
            </value>
            <value>
                <fullName>Val2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>