metadata/root/main/default/objects/TestMetaObj__c/fields/testsvlachakis1__c.field-meta.xml
<CustomField>
    <fullName>testsvlachakis1__c</fullName>
    <label>testsvlachakis1</label>
    <length>111</length>
    <type>Text</type>
</CustomField>