metadata/root/main/default/objects/TestMetaObj__c/fields/testsvlachakis2__c.field-meta.xml
<CustomField>
    <fullName>testsvlachakis2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>testsvlachakis2</label>
    <type>Checkbox</type>
</CustomField>