metadata/root/main/default/objects/TestMetaObj__c/fields/testsvlachakis3__c.field-meta.xml
<CustomField>
    <fullName>testsvlachakis3__c</fullName>
    <label>testsvlachakis3</label>
    <type>Date</type>
</CustomField>