metadata/root/main/default/objects/TestMetaObj__c/fields/testSvlachakisfield22__c.field-meta.xml
<CustomField>
    <fullName>testSvlachakisfield22__c</fullName>
    <label>testSvlachakisfield22</label>
    <length>111</length>
    <type>Text</type>
</CustomField>