metadata/root/main/default/objects/TestMetaObj__c/fields/Text1__c.field-meta.xml
<CustomField>
    <fullName>Text1__c</fullName>
    <description>any1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>Text1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>